finished display of schedule

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,3 +45,19 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.updown {
+  animation: MoveUpDown 4s linear infinite;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+@keyframes MoveUpDown {
+  0%, 100% {
+    bottom: 0;
+  }
+  50% {
+    bottom: 100px;
+  }
+}
